# Left4Pixels

./: CMakeLists.txt  CmakeLists.txt  main.cpp  readme.md  todo  widget.cpp  widget.h
Enemies/: Enemies.cpp  Enemies.h
Entity/: Entity.cpp  Entity.h
Map/: map.cpp  map.h
MapLoader/: MapLoader.cpp  MapLoader.h
Menus/: CustomButton.cpp  CustomButton.h  MenuButton.cpp  MenuButton.h  Menus.cpp  Menus.h
Player/: Player.cpp  Player.h  player.cpp  player.h
Projectiles/: Projectiles.cpp  Projectiles.h
Resources/Characters/: notes.txt
Resources/Maps/: explanations.txt  special_codes.txt
Resources/Maps/Debug/: map.txt
Resources/Maps/Lotus/: config.txt  map.txt
Resources/Maps/Pearl/: config.txt  map.txt
Resources/Textures/Characters/: notes.txt
Resources/Weapons/: stats.txt
Resources/Weapons/Stats/: M249.txt  deagle.txt  infos.txt
Resources/WeaponsStats/Stats/: M1918.txt  M249.txt  deagle.txt  infos.txt  knife.txt
Saves/: Saves.cpp  Saves.h
Scene/: Scene.cpp  Scene.h
Weapon/: Weapon.cpp  Weapon.h
Widget/: widget.cpp  widget.h
Window/: MainWindow.cpp  MainWindow.h
